--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://kit.fontawesome.com/b3fc0acd33.js" crossorigin="anonymous"></script>
     <title> Assignment 13 </title>
 </head>
 
@@ -20,6 +21,80 @@
             <img src="images/Ellipse 1.svg" alt="">
         </nav>
     </header>
+
+    <section class="index-section-1">
+        <h1> TRENDING </h1>
+        <div class="index-section-1-images">
+            <div class="index-section-1-images-div1">
+                <h3>Dolore magna alicua </h3>
+                <p class="index-section-1-images-div1-p1">You can see this beautiful beach in Los Angeles, and
+                    I hope you will visit and enjoy it one day</p>
+                <br>
+                <i class="fa-regular fa-clock"></i>
+                <p class="index-section-1-images-div1-p2"> 2m ago</p>
+            </div>
+            <div class="index-section-1-images-div2">
+                <h3>Dolore magna alicua </h3>
+                <p class="index-section-1-images-div1-p1">You can see this beautiful beach in Ibiza , and
+
+                    I hope you will visit and enjoy it one day</p>
+                <br>
+                <i class="fa-regular fa-clock"></i>
+                <p class="index-section-1-images-div1-p2"> 2m ago</p>
+            </div>
+
+            <div class="index-section-1-images-div3">
+                <h3>Dolore magna alicua </h3>
+                <p class="index-section-1-images-div1-p1">You can see this beautiful beach in Iceland, and
+
+                    I hope you will visit and enjoy it one day</p>
+                <br>
+                <i class="fa-regular fa-clock"></i>
+                <p class="index-section-1-images-div1-p2"> 2m ago</p>
+            </div>
+        </div>
+        <div>
+        </div>
+    </section>
+
+    <section class="index-section-2">
+        <h1> HAPPENING NOW </h1>
+        <div class="index-section-2-images">
+            <div class="index-section-2-images-LeftSide">
+                <div class="index-section-2-images-LeftSide-div1"></div>
+                <div class="index-section-2-images-LeftSide-div2"></div>
+            </div>
+            <div class="index-section-2-images-RightSide">
+                <div class="index-section-2-images-RightSide-div1"></div>
+                <div class="index-section-2-images-RightSide-div2"></div>
+                <div class="index-section-2-images-RightSide-div3"></div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-left-side">
+            <div class="footer-left-side-div1">
+                <p> Home </p>
+                <p> Discovery </p>
+                <p> Photos </p>
+                <p> Cotnact </p>
+            </div>
+            <div class="footer-left-side-div2">
+                <p> About </p>
+                <p> Help </p>
+                <p> Terms </p>
+                <p> Guidlines </p>
+            </div>
+            <div class="footer-left-side-div3">
+                <p> Testimonials </p>
+                <p> Advertise </p>
+                <p> Integrations </p>
+                <p> Careers </p>
+            </div>
+        </div>
+        <img src="images/geolab_logo.svg" alt="">
+    </footer>
 </body>
 
 </html>
