--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
     <header>
         <nav class="index-header">
+            <i class="fa-solid fa-bars"></i>
             <ul>
                 <a href=""> HOME </a>
                 <a href=""> DISCOVERY </a>
